added am image of cat and styled it to centralize on the page

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cats</title>
     <link rel="stylesheet" href="./assets/styles/styles.css">
 </head>
 <body>
-    
+    <figure>
+        <img src="./assets/image/cat1.jpg">
+        <figcaption>A beautiful Cat</figcaption>
+    </figure>
 </body>
 </html>
